--- a/style.css
+++ b/style.css
@@ -33,7 +33,7 @@ body {
 
 .header {
   position: fixed;
-  top: 0;
+  top: 5px;
   left: 0;
   right: 0;
   display: flex;
@@ -41,6 +41,7 @@ body {
   justify-content: space-between;
   padding: 0 9%;
   background: #000;
+  z-index: 10000;
 }
 .header .logo {
   font-weight: bolder;
@@ -67,12 +68,89 @@ body {
   display: none;
 }
 
+section {
+  padding: 5rem 9%;
+}
+
+.btn {
+  margin-top: 1rem;
+  display: inline-block;
+  padding: 1rem 2.8rem;
+  padding-right: 3rem;
+  background: linear-gradient(130deg, #f00 93%, transparent 90%);
+  color: #fff;
+  cursor: pointer;
+  font-size: 1.7rem;
+}
+.btn:hover {
+  animation: butaopulsando 1s infinite alternate;
+}
+
+@keyframes butaopulsando {
+  from {
+    transform: scale(1);
+  }
+  to {
+    transform: scale(1.1);
+  }
+}
+.home {
+  padding: 0;
+  margin-top: 6.5rem;
+}
+.home .slide {
+  min-height: 70vh;
+  background-size: cover !important;
+  background-position: center !important;
+  padding: 2rem 9%;
+  display: flex;
+  align-items: center;
+}
+.home .slide .content {
+  width: 60rem;
+}
+.home .slide .content span {
+  font-size: 2rem;
+  color: #f00;
+  display: block;
+}
+.home .slide .content h3 {
+  font-size: 5rem;
+  color: #fff;
+  padding: 1rem 0;
+}
+
+.swiper-pagination-bullet {
+  height: 2rem;
+  width: 2rem;
+  background: #fff;
+  border-radius: 0;
+}
+.swiper-pagination-bullet.swiper-pagination-bullet-active {
+  background: #f00;
+}
+
 @media (max-width: 991px) {
   html {
     font-size: 55%;
   }
   .header {
     padding: 0 2rem;
+  }
+  section {
+    padding: 3rem 2rem;
+  }
+  .home .slide {
+    padding: 2rem 5%;
+  }
+  .home .slide .content {
+    width: 50rem;
+  }
+  .home .slide .content h3 {
+    font-size: 4rem;
+  }
+  .home-slider {
+    max-height: 70vh;
   }
 }
 @media (max-width: 768px) {
