--- a/style.scss
+++ b/style.scss
@@ -42,12 +42,13 @@ body{
 //HEADER-------------------------------------------------------------------
 .header{
     position: fixed;
-    top: 0; left: 0; right: 0;
+    top: 5px; left: 0; right: 0;
     display: flex;
     align-items: center;
     justify-content: space-between;
     padding: 0 9%;
     background: $black;
+    z-index: 10000;
 
     .logo{
         font-weight: bolder;
@@ -77,7 +78,70 @@ body{
     display: none;
 }
 //FIMHEADER-------------------------------------------------------------------
+//HOME------------------------------------------------------------------------
+section{
+    padding: 5rem 9%;
+}
+.btn{
+    margin-top: 1rem;
+    display: inline-block;
+    padding: 1rem 2.8rem;
+    padding-right: 3rem;
+    background: linear-gradient(130deg, $red 93%, transparent 90%);
+    color: $white;
+    cursor: pointer;
+    font-size: 1.7rem;
 
+    &:hover{
+        animation: butaopulsando 1s infinite alternate;
+    }
+}
+@keyframes butaopulsando{
+    from{
+        transform: scale(1);
+    }
+    to{
+        transform: scale(1.1);
+    }
+}
+.home{
+    padding: 0;
+    margin-top: 6.5rem;
+    .slide{
+        min-height: 70vh;
+        background-size: cover !important;
+        background-position: center !important;
+        padding: 2rem 9%;
+        display: flex;
+        align-items: center;
+
+        .content{
+            width: 60rem;
+
+            span{
+                font-size: 2rem;
+                color: $red;
+                display: block;
+            }
+            h3{
+                font-size: 5rem;
+                color: $white;
+                padding: 1rem 0;
+            }
+        }
+    }
+}
+.swiper-pagination-bullet{
+    height: 2rem;
+    width: 2rem;
+    background: $white;
+    border-radius: 0;
+
+    &.swiper-pagination-bullet-active{
+        background: $red;
+    }
+}
+//FIMHOME---------------------------------------------------------------------
 
 
 
@@ -91,6 +155,24 @@ body{
 
     .header{
         padding: 0 2rem;
+    }
+
+    section{
+        padding: 3rem 2rem;
+    }
+
+    .home .slide{
+        padding: 2rem 5%;
+        .content{
+            width: 50rem;
+
+            h3{
+                font-size: 4rem;
+            }
+        }
+    }
+    .home-slider{
+        max-height: 70vh;
     }
 }
 
