--- a/style.css
+++ b/style.css
@@ -33,7 +33,7 @@ body {
 
 .header {
   position: fixed;
-  top: 5px;
+  top: 0;
   left: 0;
   right: 0;
   display: flex;
@@ -128,6 +128,39 @@ section {
 }
 .swiper-pagination-bullet.swiper-pagination-bullet-active {
   background: #f00;
+}
+
+.swiper2 {
+  width: 240px;
+  height: 320px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-radius: 18px;
+  color: #fff;
+  position: absolute;
+}
+.swiper2 .swiper-wrapper {
+  position: relative;
+}
+
+.sobre-texto {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  color: #fff;
+}
+.sobre-texto h3 {
+  font-size: 3rem;
+}
+.sobre-texto p {
+  font-size: 1.7rem;
+  padding: 1rem 0;
+  line-height: 1.5;
+}
+
+.about div {
+  flex: 1;
 }
 
 @media (max-width: 991px) {
