--- a/style.scss
+++ b/style.scss
@@ -42,7 +42,7 @@ body{
 //HEADER-------------------------------------------------------------------
 .header{
     position: fixed;
-    top: 5px; left: 0; right: 0;
+    top: 0; left: 0; right: 0;
     display: flex;
     align-items: center;
     justify-content: space-between;
@@ -142,7 +142,40 @@ section{
     }
 }
 //FIMHOME---------------------------------------------------------------------
+//ABOUT-----------------------------------------------------------------------
+.swiper2 {
+    width: 240px;
+    height: 320px;
+    display:flex;
+    align-items: center;
+    justify-content: center;
+    border-radius: 18px;
+    color: #fff;
+    position: absolute;
+    .swiper-wrapper{
+        position: relative;
+    }
+}
 
+.sobre-texto{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    color: $white;
+    h3{
+        font-size: 3rem;
+    }
+    p{
+        font-size: 1.7rem;
+        padding: 1rem 0;
+        line-height: 1.5;
+    }
+}
+.about div{
+    flex: 1;
+}
+
+//FIMABOUT--------------------------------------------------------------------
 
 
 
