corrigi umas coisinhas

--- a/style.scss
+++ b/style.scss
@@ -218,10 +218,13 @@ section{
         font-size: 1.7rem;
         text-align: center;
         line-height: 1.5;
+        margin-right: 2rem;
+        margin-left: 2rem;
     }
     img{
         display: block;
         margin: auto;
+        padding: 5px;
     }
 }
 
