--- a/style.css
+++ b/style.css
@@ -2,12 +2,11 @@
 * {
   margin: 0;
   padding: 0;
-  box-sizing: border-box;
   font-family: "Nunito", sans-serif;
   text-decoration: none;
   outline: none;
+  box-sizing: border-box;
   border: none;
-  text-transform: capitalize;
   transition: all 0.2s linear;
 }
 
@@ -78,7 +77,7 @@ section {
   display: inline-block;
   padding: 1rem 2.8rem;
   padding-right: 3rem;
-  background: linear-gradient(130deg, #f00 93%, transparent 90%);
+  background: linear-gradient(130deg, #f00 93%, transparent 93%);
   color: #fff;
   cursor: pointer;
   font-size: 1.7rem;
@@ -181,9 +180,6 @@ section {
 .produtos .camisas {
   padding-bottom: 20vh;
 }
-.produtos .tenis {
-  padding-bottom: 20vh;
-}
 .produtos .rlg {
   padding-bottom: 7vh;
 }
@@ -244,7 +240,7 @@ section {
 }
 .curyevitorrelogio p {
   font-size: 1.7rem;
-  text-align: center;
+  text-align: justify;
   line-height: 1.5;
   margin-right: 2rem;
   margin-left: 2rem;
@@ -286,7 +282,7 @@ section {
 }
 .curyevitorcamisas p {
   font-size: 1.7rem;
-  text-align: center;
+  text-align: justify;
   line-height: 1.5;
   margin-right: 2rem;
   margin-left: 2rem;
@@ -328,7 +324,7 @@ section {
 }
 .curyevitortenis p {
   font-size: 1.7rem;
-  text-align: center;
+  text-align: justify;
   line-height: 1.5;
   margin-right: 2rem;
   margin-left: 2rem;
@@ -348,6 +344,53 @@ section {
 .vitortenis {
   grid-area: vitortns;
   display: grid;
+}
+
+.nos {
+  color: #fff;
+  margin-bottom: 50px;
+  display: grid;
+  text-align: center;
+  grid-template-areas: "sobrenos sobrenos" "cury vitor";
+  gap: 9rem;
+}
+.nos span {
+  color: #f00;
+  font-size: 2rem;
+  text-align: center;
+}
+.nos h3 {
+  font-size: 3rem;
+  text-align: center;
+  line-height: 1.5;
+  padding-bottom: 30px;
+}
+.nos h4 {
+  font-size: 2.5rem;
+  text-align: center;
+  line-height: 1.5;
+}
+.nos p {
+  font-size: 1.7rem;
+  text-align: center;
+  line-height: 1.5;
+}
+.nos img {
+  display: block;
+  margin: auto;
+  padding: 10px;
+}
+
+.cury {
+  grid-area: cury;
+}
+
+.vitor {
+  grid-area: vitor;
+}
+
+.sobrenos {
+  grid-area: sobrenos;
 }
 
 @media (max-width: 991px) {
@@ -402,6 +445,14 @@ section {
     flex-wrap: wrap;
     flex-direction: column;
   }
+  .nos {
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: column;
+  }
+  .nos .cury {
+    padding: 20px;
+  }
 }
 @media (max-width: 768px) {
   #menu-btn {
@@ -434,5 +485,11 @@ section {
 @media (max-width: 450px) {
   html {
     font-size: 55%;
+  }
+  .home .slide .content {
+    width: 70rem;
+  }
+  .home .slide .content h3 {
+    font-size: 4rem;
   }
 }/*# sourceMappingURL=style.css.map */
