--- a/style.scss
+++ b/style.scss
@@ -2,12 +2,11 @@
 *{
     margin: 0;
     padding: 0;
-    box-sizing: border-box;
     font-family: 'Nunito', sans-serif;
     text-decoration: none;
     outline: none; 
+    box-sizing: border-box;
     border: none;
-    text-transform: capitalize;
     transition: all .2s linear;
 }
 
@@ -88,7 +87,7 @@ section{
     display: inline-block;
     padding: 1rem 2.8rem;
     padding-right: 3rem;
-    background: linear-gradient(130deg, $red 93%, transparent 90%);
+    background: linear-gradient(130deg, $red 93%, transparent 93%);
     color: $white;
     cursor: pointer;
     font-size: 1.7rem;
@@ -193,9 +192,6 @@ section{
     .camisas{
         padding-bottom: 20vh;
     }
-    .tenis{
-        padding-bottom: 20vh;
-    }
     .rlg{
         p{
             font-size: 2rem;
@@ -258,7 +254,7 @@ section{
     }
     p{
         font-size: 1.7rem;
-        text-align: center;
+        text-align: justify;
         line-height: 1.5;
         margin-right: 2rem;
         margin-left: 2rem;
@@ -302,7 +298,7 @@ section{
     }
     p{
         font-size: 1.7rem;
-        text-align: center;
+        text-align: justify;
         line-height: 1.5;
         margin-right: 2rem;
         margin-left: 2rem;
@@ -345,7 +341,7 @@ section{
     }
     p{
         font-size: 1.7rem;
-        text-align: center;
+        text-align: justify;
         line-height: 1.5;
         margin-right: 2rem;
         margin-left: 2rem;
@@ -368,6 +364,53 @@ section{
 }
 //FIM TENIS--------------------------------------------------------------------
 //FIM PRODUTOS-----------------------------------------------------------------
+//INICIO NOS--------------------------------------------------------------------
+.nos{
+    color: $white;
+    margin-bottom: 50px;
+    display: grid;
+    text-align: center;
+    grid-template-areas:
+    "sobrenos sobrenos"
+    "cury vitor";
+    gap: 9rem;
+    span{
+        color: $red;
+        font-size: 2rem;
+        text-align: center;
+    }
+    h3{
+        font-size: 3rem;
+        text-align: center;
+        line-height: 1.5;
+        padding-bottom: 30px;
+    }
+    h4{
+        font-size: 2.5rem;
+        text-align: center;
+        line-height: 1.5;
+    }
+    p{
+        font-size: 1.7rem;
+        text-align: center;
+        line-height: 1.5;
+    }
+    img{
+        display: block;
+        margin: auto;
+        padding: 10px;
+    }  
+}
+.cury{
+    grid-area: cury;
+}
+.vitor{
+    grid-area: vitor;
+
+}
+.sobrenos{
+    grid-area: sobrenos;
+}
 
 
 
@@ -375,7 +418,8 @@ section{
 
 
 
-//FIMPRODUTOS-----------------------------------------------------------------
+
+//FIM NOS-----------------------------------------------------------------------
 
 
 
@@ -441,6 +485,15 @@ section{
         flex-wrap: wrap;
         flex-direction: column;
     }
+    //nos
+    .nos{
+        display: flex;
+        flex-wrap: wrap;
+        flex-direction: column;
+        .cury{
+            padding: 20px;
+        }
+    }
 }
 
 @media (max-width: 768px) {
@@ -478,5 +531,14 @@ section{
 @media (max-width: 450px) {
     html{
         font-size: 55%;
+    }
+    .home .slide{
+        .content{
+            width: 70rem;
+
+            h3{
+                font-size: 4rem;
+            }
+        }
     }
 }
